syntax = "proto3";

package go.micro.srv.products;
option go_package="products";
import "google/protobuf/timestamp.proto";
import "github.com/jianhan/pkg/proto/common/common.proto";



service SuppliersService {
    rpc UpsertSuppliers (UpsertSuppliersReq) returns (UpsertSuppliersRsp);
}

message UpsertSuppliersReq {
    repeated Supplier suppliers = 1;
}

message UpsertSuppliersRsp {
    repeated Supplier suppliers = 1;
}

message Supplier {
    // @inject_tag: valid:"required~Supplier ID is required, uuidv4~supplier ID must be a valid UUIDv4"
    string ID = 1;
    // @inject_tag: valid:"required~Supplier name is required"
    string name = 2;
    // @inject_tag: valid:"url~Supplier logo must be a valid URL"
    string logo_url = 3;
    // @inject_tag: valid:"required, url~Supplier home page must be a valid URL"
    string home_page_url = 4;
    string currency = 5;
    int64 display_order = 6;
    go.micro.srv.pkg.common.Timestamp timestamp = 7;
}
